load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/tiancaiamao/sched
gazelle(name = "gazelle")

go_library(
    name = "sched",
    srcs = [
        "disable.go",
	"enable.go", #keep
        "sched.go",
    ],
    importpath = "github.com/tiancaiamao/sched",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_uber_go_automaxprocs//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_uber_go_automaxprocs//:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "sched_test",
    srcs = ["sched_test.go"],
    embed = [":sched"],
)
